deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-payments
  name: ms-payments
  namespace: default 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-payments
  template:
    metadata:
      labels:
        app: ms-payments
    spec:
      containers:
        - image: 794892305647.dkr.ecr.us-east-1.amazonaws.com/payments-service:3_test
          name: payments-service
          ports:
            - containerPort: 8080
              name: ms-payments 
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
# strategy:
#     type: RollingUpdate
#     rollingUpdate:
#       maxSurge: 25%
#       maxUnavailable: 25%
#   revisionHistoryLimit: 10
#   progressDeadlineSeconds: 600
#   paused: false
