ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-mspay
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "*.elb.us-east-1.amazonaws.com"
    http:
      paths:
      - path: /ms-payments(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: ms-payments-svc
          servicePort: 30004
